Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73728

qwebsocketserver_p.cpp:393:18: error: use of undeclared identifier 'currentSender'

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.14.0 Alpha
    • 5.14.0 Alpha
    • WebSockets
    • None
    • All
    • aec3c1e93ad7a26b0a8fa3e75df65213101c0420 (qt/qtwebsockets/dev)

    Description

      https://codereview.qt-project.org/#/c/252472/ Update submodules on 'dev' in qt5

      http://coin/coin/integration/qt/qt5/tasks/1550437476

      http://coin/coin/api/results/qt/qtwebsockets/a1e6170ec04e463b94f348bde2bc86ff862717b5/MacOSMacOS_10_12x86_64MacOSMacOS_10_12x86_64Clangqtci-macos-10.12-x86_64-9-0da7a7DeveloperBuild_NoFramework_Release_QtNamespace_NoPch/428e44d62b470370f3f8cc5822d78bc5091728ea/build_1550445043/log.txt.gz

      agent:2019/02/10 18:32:29 build.go:192: qwebsocketserver_p.cpp:393:18: error: use of undeclared identifier 'currentSender'
      agent:2019/02/10 18:32:29 build.go:192:     if (Q_LIKELY(currentSender)) {
      agent:2019/02/10 18:32:29 build.go:192:                  ^
      agent:2019/02/10 18:32:29 build.go:192: qwebsocketserver_p.cpp:394:60: error: use of undeclared identifier 'currentSender'
      agent:2019/02/10 18:32:29 build.go:192:         QTcpSocket *pTcpSocket = qobject_cast<QTcpSocket*>(currentSender->sender);
      agent:2019/02/10 18:32:29 build.go:192:                                                            ^
      agent:2019/02/10 18:32:29 build.go:192: qwebsocketserver_p.cpp:405:21: error: use of undeclared identifier 'currentSender'
      agent:2019/02/10 18:32:29 build.go:192:     if (Q_UNLIKELY(!currentSender)) {
      agent:2019/02/10 18:32:29 build.go:192:                     ^
      agent:2019/02/10 18:32:29 build.go:192: qwebsocketserver_p.cpp:408:56: error: use of undeclared identifier 'currentSender'
      agent:2019/02/10 18:32:29 build.go:192:     QTcpSocket *pTcpSocket = qobject_cast<QTcpSocket*>(currentSender->sender);
      agent:2019/02/10 18:32:29 build.go:192:                                                        ^
      agent:2019/02/10 18:32:30 build.go:192: 4 errors generated.
      agent:2019/02/10 18:32:30 build.go:192: make[2]: *** [.obj/qwebsocketserver_p.o] Error 1
      agent:2019/02/10 18:32:30 build.go:192: make[2]: *** Waiting for unfinished jobs....
      agent:2019/02/10 18:32:31 build.go:192: make[1]: *** [sub-websockets-make_first-ordered] Error 2
      agent:2019/02/10 18:32:31 build.go:192: make: *** [sub-src-make_first] Error 2
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes