Don't use internal members of QObject

And compile again after those got changed in qtbase.

Fixes: QTBUG-73728
Change-Id: Ibcd6af650ed1ceb4f9218a49e9a3c2ca466018bb
Reviewed-by: Liang Qi <liang.qi@qt.io>